Fix sonar issues (#18)