@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 import com.sterul.opencookbookapiserver.controllers.exceptions.NotAuthorizedException;
 import com.sterul.opencookbookapiserver.controllers.requests.WeekplanDayPut;
@@ -36,9 +35,7 @@ public class WeekplanController extends BaseController {
     public List<WeekplanDayResponse> getBetweenDates(@PathVariable @DateTimeFormat(pattern = "yyyy-MM-dd") Date from,
             @PathVariable @DateTimeFormat(pattern = "yyyy-MM-dd") Date to) {
         return weekplanService.getWeekplanDaysBetweenTime(from, to, getLoggedInUser()).stream()
-                .map(weekplanDayEntity -> {
-                    return entityToResponse(weekplanDayEntity);
-                }).collect(Collectors.toList());
+                .map(this::entityToResponse).toList();
     }
 
     @PutMapping("/{date}")
